Updated mail templates.

--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -38,7 +38,7 @@
 			border-radius: 4px;
 		}
 		a[href] {
-			color: #888!important;
+			color: #666!important;
 			text-decoration: none;
 			transition: all .5s!important;
 		}
@@ -49,7 +49,7 @@
 		}
 
 		a[href]:visited {
-			color: #888!important;
+			color: #666!important;
 			text-decoration: underline;
 
 		}
@@ -132,22 +132,22 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 17px; font-weight: 300; padding-top: 10px; color: #888;"  class="apple-link">
-										<span style="text-align: center; border: 1px solid #408bca; color: #3d3d3d; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
+										style="font-size: 17px; font-weight: 300; padding-top: 10px; color: #666;"  class="apple-link">
+										<span style="text-align: center; border: 1px solid #408bca; color: #666; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
 										<a href="https://www.surveymonkey.co.uk/r/P6MLZZK" target="_blank"  style="color: #828fa0; text-decoration: underline !important;">Complete our wellbeing assessment</a>
 									</td>
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 17px; font-weight: 300; padding-top: 10px; color: #888;" class="apple-link">
-										<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #3d3d3d; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">2</span>
-										<a href="https://www.facebook.com/getwalkers" target="_blank" style="color: #888; text-decoration: underline !important;">Say hello in our Facebook page</a>
+										style="font-size: 17px; font-weight: 300; padding-top: 10px; color: #666;" class="apple-link">
+										<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #666; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">2</span>
+										<a href="https://www.facebook.com/getwalkers" target="_blank" style="color: #666; text-decoration: underline !important;">Say hello in our Facebook page</a>
 									</td>
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style=" padding-bottom: 20px; font-size: 17px; font-weight: 300; padding-top: 10px; color: #888">
-										<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #888; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">3</span>
+										style=" padding-bottom: 20px; font-size: 17px; font-weight: 300; padding-top: 10px; color: #666">
+										<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #666; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">3</span>
 										Multiply the fun. Invite your family and friends
 									</td>
 								</tr>
@@ -155,7 +155,7 @@
 									<td align="center">
 										<br/><br/>
 										By clicking on the following link, you are confirming your email
-										<a style="font-size: 13px; font-weight: 400; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff !important; text-decoration: none;"
+										<a style="font-size: 14px; font-weight: 500; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff !important; text-decoration: none;"
 										   href="{{verificationLink}}">CONFIRM EMAIL ADDRESS</a>
 									</td>
 								</tr>
@@ -166,7 +166,7 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 14px; font-weight: 400; text-align: center; color: #5F5F5F;     padding: 25px 0 20px;">
+										style="font-size: 14px; font-weight: 400; text-align: center; color: #959e9a;     padding: 25px 0 20px;">
 										Thank you for joining!<br>
 										-The Active pathways Team
 									</td>
