--- a/service-api/templates/emailTemplates/emailNewChallenge.html
+++ b/service-api/templates/emailTemplates/emailNewChallenge.html
@@ -86,7 +86,7 @@
 								</tr>
 								<tr>
 									<td align="center">
-										<a style="font-size: 12px; font-weight: 400; width: 190px; display: block; letter-spacing: 1px;
+										<a style="font-size: 14px; font-weight: 400; width: 190px; display: block; letter-spacing: 1px;
 										 padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff!important; text-decoration: none;"
 										   href="{{websiteUrl}}#/challenge/{{challengeId}}">SHOW ME</a>
 									</td>
@@ -98,7 +98,7 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 14px; font-weight: 400; text-align: center; color: #b5beca;     padding: 25px 0 20px;">
+										style="font-size: 14px; font-weight: 400; text-align: center; color: #959e9a;     padding: 25px 0 20px;">
 										-The Active pathways Team
 									</td>
 								</tr>
