--- a/service-api/templates/emailTemplates/programmeEmail.html
+++ b/service-api/templates/emailTemplates/programmeEmail.html
@@ -127,15 +127,15 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 17px; font-weight: 400; padding-top: 10px; color: #888;"
+										style="font-size: 17px; font-weight: 400; padding-top: 10px; color: #666;"
 										class="apple-link">
-										<span style="text-align: center; border: 1px solid #408bca; color: #000; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
+										<span style="text-align: center; border: 1px solid #408bca; color: #666; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
 										Today's challenge is to complete our short survey (< 1 minute) :-)
 									</td>
 								</tr>
 								<tr>
 									<td align="center">
-										<a style="font-size: 14px; font-weight: 400; width: 190px; display: block; letter-spacing: 1px;
+										<a style="font-size: 14px; font-weight: 500; width: 190px; display: block; letter-spacing: 1px;
 										 padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff!important; text-decoration: none;"
 										   href="https://www.surveymonkey.co.uk/r/P5SZ7PQ" target="_blank">Give
 											feedback</a>
@@ -148,7 +148,7 @@
 								</tr>
 								<tr>
 									<td width="100%" align="left"
-										style="font-size: 14px; font-weight: 400; text-align: center; color: #b5beca;     padding: 25px 0 20px;">
+										style="font-size: 14px; font-weight: 400; text-align: center; color: #959e9a;     padding: 25px 0 20px;">
 										Thank you for joining!<br>
 										-The Active pathways Team
 									</td>
