--- a/service-web/src/views/Dashboard/dashboard.html
+++ b/service-web/src/views/Dashboard/dashboard.html
@@ -7,7 +7,9 @@
   <section class="cf w-100 ph0 ph6-l pt4 gradient-blue">
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
       <div class="w-100 tr">
-        <div class="f6 fw6 link br-pill ph4 mb4 dib tr white pt2 pb2">{{(user && user.name) ? (user.name.first +" "+ user.name.last) : ''}} ({{user ? user.email : ''}})</div>
+        <div class="f6 fw6 link br-pill ph4 mb4 dib tr white pt2 pb2">{{(user && user.name) ? (user.name.first +" "+
+          user.name.last) : ''}} ({{user ? user.email : ''}})
+        </div>
 
         <a class="f6 fw6 link br-pill ph4 mb4 dib tr white blue-dark-color pt2 pb2"
            style="cursor: pointer" @click="logout()">Logout</a>
@@ -20,7 +22,10 @@
         ></component>
       </template>
       <template v-else>
-        <component :is="statusComponents['NO_CHECKIN']"></component>
+        <component :is="statusComponents['NO_CHECKIN']"
+                   :challengeData="userChallengeStatePending"
+                   :programmeData="currentProgrammeData"
+        ></component>
       </template>
     </div>
   </section>
@@ -83,12 +88,18 @@
               <li
                 class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05 "
                 v-for="(list, i) in userChallengeStateCompletedOrSkipped">
-                <img v-if="list['rating']===5" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smile5selected.svg"/>
-                <img v-else-if="list['rating']===4" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smile4selected.svg"/>
-                <img v-else-if="list['rating']===3" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smile3selected.svg"/>
-                <img v-else-if="list['rating']===2" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smile2selected.svg"/>
-                <img v-else-if="list['rating']===1" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smile1selected.svg"/>
-                <img v-else="list['rating']===-1 || list['rating']===''" src="../../assets/images/smile4.svg" alt="Mountains" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l"/>
+                <img v-if="list['rating']===5" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l"
+                     src="../../assets/images/smile5selected.svg"/>
+                <img v-else-if="list['rating']===4" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l"
+                     src="../../assets/images/smile4selected.svg"/>
+                <img v-else-if="list['rating']===3" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l"
+                     src="../../assets/images/smile3selected.svg"/>
+                <img v-else-if="list['rating']===2" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l"
+                     src="../../assets/images/smile2selected.svg"/>
+                <img v-else-if="list['rating']===1" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l"
+                     src="../../assets/images/smile1selected.svg"/>
+                <img v-else="list['rating']===-1 || list['rating']===''" src="../../assets/images/smile4.svg"
+                     alt="Mountains" class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l"/>
                 <div class="pl3 flex-auto">
                   <span class="f5 fw5 db color-light">{{(list.programme || {}).name}} - Day {{dayNum(list)}} - {{list.challengeDate | parseDate('DD/MM')}}</span>
                   <span class="f6 f4-m f4-l fw5 db color-light">{{list.status}}</span>
