--- a/service-api/templates/emailTemplates/programmeEmail.html
+++ b/service-api/templates/emailTemplates/programmeEmail.html
@@ -93,7 +93,7 @@
 								<tr>
 									<td width="100%" align="left"
 										style="font-size: 16px; font-weight: 500; color: #3d3d3d; padding-bottom: 20px;">
-										HI {{user.first}},
+										HI {{user.name.first}},
 									</td>
 								</tr>
 								<tr>
