fixed copy changes on home page

--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -61,7 +61,7 @@
           <div class="fl w-100 numberlist tl center">
             <ol class="avenir">
               <li class="f5 f4-m f4-l fw5 avenir">Create an account</li>
-              <li class="f5 f4-m f4-l fw5 avenir">Receive a daily challenge on you inbox</li>
+              <li class="f5 f4-m f4-l fw5 avenir">Receive a daily challenge on your inbox</li>
               <li class="f5 f4-m f4-l fw5 avenir">Complete the challenge</li>
               <li class="f5 f4-m f4-l fw5 avenir">Check-in, reflect and celebrate!</li>
             </ol>
