added terms-of-use and privacy-policy

--- a/service-web/src/components/login/signUp/signUp.html
+++ b/service-web/src/components/login/signUp/signUp.html
@@ -94,6 +94,7 @@
                     CONNECT</a>
                 </div>-->
               </form>
+              <div class="terms">*By clicking sign up, I agree to Active Pathways <span @click.stop.prevent="showAboutUs(1)">Privacy Policy</span> and <span @click.stop.prevent="showAboutUs(2)">Terms of use</span>.</div>
             </div>
             <div class="fl w-100 w-50-l w-50-m blue-dark-color pa5 br--right br3 dn db-l db-m vh-100">
             </div>
