--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -243,6 +243,8 @@
           <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
           <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
           <p class="f6 fw5 white mt1">Registered in England and Wales 9462175</p>
+          <p class="f6 fw5 white mt1" @click.stop.prevent="showAboutUs(1)">Privacy Policy</p>
+          <p class="f6 fw5 white mt1" @click.stop.prevent="showAboutUs(2)">Terms Of Use</p>
         </div>
       </div>
     </div>
