--- a/service-web/src/views/aboutus/privacy-policy/privacypolicy.html
+++ b/service-web/src/views/aboutus/privacy-policy/privacypolicy.html
@@ -1,70 +1,249 @@
-<div>
-    Privacy Policy
-This Privacy Policy is effective as of May 24th, 2018.
-Smartplayds Limited (“Active Pathways”) provides the Privacy Policy to inform users about policies and processes regarding the collection, use and disclosure of personally identifiable information (“personal information”) received from users of Active Pathways on www.activepathways.co
-We do not sell, trade or otherwise transfer your personal information to third parties in any manner that could be harmful, dangerous or violating your privacy. If you have any queries regarding how we treat your personal data, please reach out to us at activepathways@smartplayds.com
-Information Collection
-We collect and process information from you when you create an account, enrol on a programme and participate on a programme.
-We collect information in the following ways:
-Information you give us. For example, to participate on a programme, our services require you to sign up for an account. When you do, we’ll ask for personal information, like your name or email address.
-Information we get from your use of our services. We collect information about the services that you use and how you use them, like when you accept or complete a challenge of the programme you enrolled.
-This information includes:
-Device Information. We might collect device-specific information, such as your hardware model, operating system version, unique device identifiers.
-Log Information. When you use our services or view the content provided by Active Pathways, we automatically collect and store certain information in server logs. This includes:
-details of how you used our service, such as your programme challenge statuses.
-details about your connection, such as IP address, date, time, edge-location, ssl-protocol, ssl-cipher or time-taken to serve you requested site.
-device event information such as crashes, system activity, hardware settings, browser type, browser language, the date and time of your request and referral URL.
-cookies that may uniquely identify your browser or your Active Pathways account.
-Location Information. When you use the Active Pathways services, we may collect and process information about your actual location. Currently, we only use IP address as the source information to approximately determine your current location.
-Local Storage. We may collect and store information (including personal information) locally on your device using mechanisms such as browser web storage (including HTML 5) and application data caches.
-Cookies and similar technologies. We and our partners use various technologies to collect and store information when you use the Active Pathways services, and this may include using cookies or similar technologies to identify your browser or device.
-Why do we need your information and how we use it
-We use the information we collect from all of our services to provide, maintain, protect and improve them, to develop new ones, and to protect our Sites and our users. We also use this information to offer you tailored content – like proper instructions how to get the most out of Active Pathways services.
-We will ask for your consent before using information for a purpose other than those that are set out in this Privacy Policy.
-Active Pathways processes personal information on servers of our infrastructure provider. Therefore, we may process your personal information on a server located outside the country where you live.
-Accessing and updating your personal information
-Whenever you use our services, we aim to provide you with access to your personal information. If that information is wrong, we strive to give you ways to update it quickly or to delete it – unless we have to keep that information for legitimate business or legal purposes.
+<div class="wrapper">
+  <section class="cf w-100 ph0 ph6-l pt4 pb6">
+    <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
+      <section class="w-100 tr">
+        <div style="text-align: left; ">
+          <h3>Privacy Policy</h3>
+          <p>This Privacy Policy is effective as of May 24th, 2018.</p>
+          <p>Smartplayds Limited (“Active Pathways”) provides the Privacy Policy to inform users about policies and
+            processes
+            regarding the collection, use and disclosure of personally identifiable information (“personal information”)
+            received from users of Active Pathways on www.activepathways.co</p>
+          <p>We do not sell, trade or otherwise transfer your personal information to third parties in any manner that
+            could be
+            harmful, dangerous or violating your privacy. If you have any queries regarding how we treat your personal
+            data,
+            please reach out to us at activepathways@smartplayds.com</p>
+          <h3>Information Collection</h3>
+          <p>We collect and process information from you when you create an account, enrol on a programme and
+            participate
+            on a
+            programme.</p>
+          <p>We collect information in the following ways:</p>
+          <p>
+            <b>Information you give us.</b> For example, to participate on a programme, our services require you to sign
+            up for
+            an
+            account. When you do, we’ll ask for personal information, like your name or email address.
+          </p>
+          <p>
 
+            <b>Information we get from your use of our services.</b> We collect information about the services that you
+            use and
+            how you
+            use them, like when you accept or complete a challenge of the programme you enrolled.
+          </p>
+          <p>
+            This information includes:
+          </p>
+          <p>
 
-Information we share
-We do not share personal information with companies, organizations and individuals outside of Active Pathways unless one of the following circumstances applies:
-With your consent. We will share personal information with companies, organizations or individuals outside of Active Pathways when we have your consent to do so. We require opt-in consent for the sharing of any sensitive personal information.
-For legal reasons. We will share personal information with companies, organizations or individuals outside of Active Pathways if we have a good-faith belief that access, use, preservation or disclosure of the information is reasonably necessary to:
-meet any applicable law, regulation, legal process or enforceable governmental request;
-enforce applicable Terms of Service, including investigation of potential violations;
-detect, prevent, or otherwise address fraud, security or technical issues;
-protect against harm to the rights, property or safety of Active Pathways, our users or the public as required or permitted by law.
-We may share non-personally identifiable information publicly and with our partners – like publishers, advertisers or connected sites. For example, we may share information publicly to show trends about the general use of our services.
-Information security
-We work hard to protect Active Pathways and our users from unauthorized access to or unauthorized alteration, disclosure or destruction of information we hold. In particular:
-We encrypt our services using SSL protocol.
-We review our information collection, storage and processing practices, including physical security measures, to guard against unauthorized access to systems.
+            <b>Device Information.</b> We might collect device-specific information, such as your hardware model,
+            operating
+            system
+            version, unique device identifiers.
+          </p>
+          <p>
 
-Your consent
-By using our site, you consent to our Site Privacy Policy and the way how and for what purpose we process your personal information.
+            <b>Log Information.</b> When you use our services or view the content provided by Active Pathways, we
+            automatically
+            collect
+            and store certain information in server logs. This includes:
+          </p>
+          details of how you used our service, such as your programme challenge statuses.
+          <p>
 
-Third party service providers
-Last updated May 24th, 2018.
-Smartplayds Limited (“Active Pathways”) may engage and use a selected set of third parties to process certain user Data in connection with the Service (each, a “Subprocessor”). This page provides all information about the entity, location of processing and role of each Subprocessor.
-Why do we need them? We work with the following companies and incorporated their services as an underlying, integral part of our solution.
-SUBPROCESSOR
-PURPOSE
-DATA
-COUNTRY OF PROCESSING
-Digital Ocean
-Infrastructure as a service
-All user data
-England
-Mailgun
-Emails
-Contact data
-USA
-Mailchimp
-Newsletters
-Contact data
-USA
-Google (GTM, GA)
-Web analytics
-Contact data
-USA
+          </p>
+          <p>
+            details about your connection, such as IP address, date, time, edge-location, ssl-protocol, ssl-cipher or
+            time-taken
+            to serve you requested site.
+
+          </p>
+          <p>
+            device event information such as crashes, system activity, hardware settings, browser type, browser
+            language,
+            the date
+            and time of your request and referral URL.
+
+          </p>
+          <p>
+            cookies that may uniquely identify your browser or your Active Pathways account.
+          </p>
+
+          <p>
+            <b>Location Information.</b>
+            When you use the Active Pathways services, we may collect and process information about
+            your
+            actual location. Currently, we only use IP address as the source information to approximately determine your
+            current
+            location.
+          </p>
+          <p>
+            <b>Local Storage.</b> We may collect and store information (including personal information) locally on your
+            device
+            using
+            mechanisms such as browser web storage (including HTML 5) and application data caches.
+          </p>
+          <p>
+            <b>Cookies and similar technologies.</b> We and our partners use various technologies to collect and store
+            information
+            when
+            you use the Active Pathways services, and this may include using cookies or similar technologies to identify
+            your
+            browser or device.
+          </p>
+          <h3> Why do we need your information and how we use it</h3>
+          <p>
+            We use the information we collect from all of our services to provide, maintain, protect and improve them,
+            to
+            develop
+            new ones, and to protect our Sites and our users. We also use this information to offer you tailored content
+            –
+            like
+            proper instructions how to get the most out of Active Pathways services.
+          </p>
+          <p>
+            We will ask for your consent before using information for a purpose other than those that are set out in
+            this
+            Privacy
+            Policy.
+          </p>
+          <p>Active Pathways processes personal information on servers of our infrastructure provider. Therefore, we may
+            process
+            your personal information on a server located outside the country where you live.</p>
+          <h3>Accessing and updating your personal information</h3>
+          <p>Whenever you use our services, we aim to provide you with access to your personal information. If that
+            information is
+            wrong, we strive to give you ways to update it quickly or to delete it – unless we have to keep that
+            information
+            for
+            legitimate business or legal purposes.
+          </p>
+
+          <h3>Information we share</h3>
+          <p>We do not share personal information with companies, organizations and individuals outside of Active
+            Pathways
+            unless
+            one of the following circumstances applies:</p>
+          <p><b>With your consent.</b> We will share personal information with companies, organizations or individuals
+            outside of
+            Active
+            Pathways when we have your consent to do so. We require opt-in consent for the sharing of any sensitive
+            personal
+            information.</p>
+          <p>
+            <b>For legal reasons.</b> We will share personal information with companies, organizations or individuals
+            outside of
+            Active
+            Pathways if we have a good-faith belief that access, use, preservation or disclosure of the information is
+            reasonably
+            necessary to:
+          </p>
+          <p>meet any applicable law, regulation, legal process or enforceable governmental request;</p>
+          <p>enforce applicable Terms of Service, including investigation of potential violations;</p>
+          <p>detect, prevent, or otherwise address fraud, security or technical issues;</p>
+          <p>protect against harm to the rights, property or safety of Active Pathways, our users or the public as
+            required
+            or
+            permitted by law.</p>
+          <p>We may share non-personally identifiable information publicly and with our partners – like publishers,
+            advertisers or
+            connected sites. For example, we may share information publicly to show trends about the general use of our
+            services.</p>
+          <h3>Information security</h3>
+          <p>We work hard to protect Active Pathways and our users from unauthorized access to or unauthorized
+            alteration,
+            disclosure or destruction of information we hold. In particular:</p>
+          <p>We encrypt our services using SSL protocol.</p>
+          <p>We review our information collection, storage and processing practices, including physical security
+            measures,
+            to
+            guard
+            against unauthorized access to systems.</p>
+
+          <h3>Your consent</h3>
+          <p>By using our site, you consent to our Site Privacy Policy and the way how and for what purpose we process
+            your
+            personal information.
+          </p>
+          <h3>Third party service providers</h3>
+          <p>
+            Last updated May 24th, 2018.
+          </p>
+          <p>Smartplayds Limited (“Active Pathways”) may engage and use a selected set of third parties to process
+            certain
+            user
+            Data in connection with the Service (each, a “Subprocessor”). This page provides all information about the
+            entity,
+            location of processing and role of each Subprocessor.</p>
+          <p><b>Why do we need them?</b> We work with the following companies and incorporated their services as an
+            underlying,
+            integral
+            part of our solution.</p>
+
+          <table style="width:100%" cellspacing="0">
+            <tr>
+              <th>SUBPROCESSOR</th>
+              <th>PURPOSE</th>
+              <th>DATA</th>
+              <th>COUNTRY OF PROCESSING</th>
+            </tr>
+            <tr>
+              <td>Digital Ocean</td>
+              <td>Infrastructure as a service</td>
+              <td>All user data</td>
+              <td>England</td>
+            </tr>
+            <tr>
+              <td>Mailgun</td>
+              <td>Emails</td>
+              <td>Contact data</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>Mailchimp</td>
+              <td>Newsletters</td>
+              <td>Contact data</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>Google (GTM, GA)</td>
+              <td>Web analytics</td>
+              <td>Contact data</td>
+              <td>USA</td>
+            </tr>
+          </table>
+        </div>
+      </section>
+    </div>
+  </section>
+
+  <footer class="cf w-100 pa1 pa1-m pa5-l ph6-ns bg-navy white" id="feafooter">
+    <div class="dt w-100 mw8 ph3 ph4-m ph4-l tl center">
+      <div class="cf">
+        <div class="fl w-100 w-50-l w-50-m avenir">
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
+            <span class="mr2">Reach us</span> <a class="f5 fw5 white no-underline white"
+                                                 href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a>
+          </h3>
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white mt4-ns">
+            Join our community on <a href="https://www.facebook.com/getwalkers/"
+                                     class=" white underline" target="_blank">Facebook</a>
+          </h3>
+        </div>
+        <div class="fl w-100 w-50-l w-50-m">
+          <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
+            SMARTplayds Limited</h3>
+          <p class="f6 fw5 white mt2">Collaborate Works - Steward House <span class="underline">14 Commercial Way</span>
+          </p>
+          <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
+          <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
+          <p class="f6 fw5 white mt1">Registered in England and Wales 9462175</p>
+          <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(1)">Privacy Policy</p>
+          <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(2)">Terms Of Use</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </div>
