--- a/service-web/src/views/aboutus/terms-of-use/termsofuse.html
+++ b/service-web/src/views/aboutus/terms-of-use/termsofuse.html
@@ -1,16 +1,77 @@
-<div>
-  Terms of Use (#terms)
-These Terms were last updated on May 25th, 2018
-Your use of the Service is governed by the following terms of service (“Terms”). Please review the Terms carefully before using the Service. Do not use the Service if you do not accept the Terms.
-1. Service
-1.1 Smartplayds Limited 14 Commercial Way, Woking, United Kingdom (European Union), Company ID: 9462175, tel: +44 - 203 695 2189 (“Active Pathways”) offers a digital platform provided through a cloud based platform that enables users of the service to enrol and participate on programmes to encourage physical activity. The Service runs thanks to the “Underlying Systems” meaning the software, IT solutions, systems and networks owned by Active Pathways and used to provide the Service, including any third party solutions, systems and networks and any software components Active Pathways may make available, via app stores or other channels, as part of or related to, the Service (“Components”).
-1.2 The Service can be accessed through an electronic device with internet connection by going to activepathways.co
-1.3 Users of the service will need to sign up using their name, surname, an individual email address and a password via the Website and create an account in order to enrol to a programme.
-1.4 Active Pathways may contact the user to send the user emails directly or indirectly relating to the user’s use of the Service.
+<div class="wrapper">
+  <section class="cf w-100 ph0 ph6-l pb6">
+    <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
+      <section class="w-100 tr">
+        <div style="text-align: left; ">
+          <h3>Terms of Use (#terms)</h3>
+          <p>These Terms were last updated on May 25th, 2018</p>
+          <p>Your use of the Service is governed by the following terms of service (“Terms”). Please review the Terms
+            carefully before using the Service. Do not use the Service if you do not accept the Terms.
+          </p>
+          <h4>1. Service</h4>
+          <p>
+            1.1 Smartplayds Limited 14 Commercial Way, Woking, United Kingdom (European Union), Company ID: 9462175,
+            tel: +44 - 203 695 2189 (“Active Pathways”) offers a digital platform provided through a cloud based
+            platform that enables users of the service to enrol and participate on programmes to encourage physical
+            activity. The Service runs thanks to the “Underlying Systems” meaning the software, IT solutions, systems
+            and networks owned by Active Pathways and used to provide the Service, including any third party solutions,
+            systems and networks and any software components Active Pathways may make available, via app stores or other
+            channels, as part of or related to, the Service (“Components”).
 
-2. User Data
-2.1. User is and continues to be the owner of all data, content and communication information (including personal information.
-2.2. Active Pathways use of personal user Data shall be governed by these Terms and Active Pathways Privacy policy (“Privacy Policy”). Please read the Privacy Policy, which is hereby incorporated into and made a part of these Terms by this reference as though fully set forth herein.
-2.3. Active Pathways will take standard industry measures to backup all user Data stored using the Services.
-2.4. Active Pathways treats all user Data in accordance with the principles of confidentiality.
+          </p>
+          <p> 1.2 The Service can be accessed through an electronic device with internet connection by going to
+            activepathways.co
+          </p>
+          <p> 1.3 Users of the service will need to sign up using their name, surname, an individual email address and a
+            password via the Website and create an account in order to enrol to a programme.
+          </p>
+          <p> 1.4 Active Pathways may contact the user to send the user emails directly or indirectly relating to the
+            user’s use of the Service.
+          </p>
+
+          <h4>2. User Data</h4>
+          <p> 2.1. User is and continues to be the owner of all data, content and communication information (including
+            personal information.
+          </p>
+          <p> 2.2. Active Pathways use of personal user Data shall be governed by these Terms and Active Pathways
+            Privacy policy (“Privacy Policy”). Please read the Privacy Policy, which is hereby incorporated into and
+            made a part of these Terms by this reference as though fully set forth herein.
+          </p>
+          <p> 2.3. Active Pathways will take standard industry measures to backup all user Data stored using the
+            Services.
+          </p>
+          <p> 2.4. Active Pathways treats all user Data in accordance with the principles of confidentiality.
+          </p>
+        </div>
+      </section>
+    </div>
+  </section>
+
+  <footer class="cf w-100 pa1 pa1-m pa5-l ph6-ns bg-navy white" id="feafooter">
+    <div class="dt w-100 mw8 ph3 ph4-m ph4-l tl center">
+      <div class="cf">
+        <div class="fl w-100 w-50-l w-50-m avenir">
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
+            <span class="mr2">Reach us</span> <a class="f5 fw5 white no-underline white"
+                                                 href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a>
+          </h3>
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white mt4-ns">
+            Join our community on <a href="https://www.facebook.com/getwalkers/"
+                                     class=" white underline" target="_blank">Facebook</a>
+          </h3>
+        </div>
+        <div class="fl w-100 w-50-l w-50-m">
+          <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
+            SMARTplayds Limited</h3>
+          <p class="f6 fw5 white mt2">Collaborate Works - Steward House <span class="underline">14 Commercial Way</span>
+          </p>
+          <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
+          <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
+          <p class="f6 fw5 white mt1">Registered in England and Wales 9462175</p>
+          <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(1)">Privacy Policy</p>
+          <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(2)">Terms Of Use</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </div>
