fix header show on off

--- a/service-web/src/views/aboutus/privacy-policy/privacypolicy.html
+++ b/service-web/src/views/aboutus/privacy-policy/privacypolicy.html
@@ -240,8 +240,8 @@
           <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
           <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
           <p class="f6 fw5 white mt1">Registered in England and Wales 9462175</p>
-          <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(1)">Privacy Policy</p>
-          <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(2)">Terms Of Use</p>
+          <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(1)" style="cursor: pointer">Privacy Policy</p>
+          <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(2)" style="cursor: pointer">Terms Of Use</p>
         </div>
       </div>
     </div>
