--- a/service-web/src/views/aboutus/terms-of-use/termsofuse.html
+++ b/service-web/src/views/aboutus/terms-of-use/termsofuse.html
@@ -59,6 +59,10 @@
             Join our community on <a href="https://www.facebook.com/getwalkers/"
                                      class=" white underline" target="_blank">Facebook</a>
           </h3>
+          <div class="pt4">
+            <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(1)" style="cursor: pointer">Privacy Policy</p>
+            <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(2)" style="cursor: pointer">Terms Of Use</p>
+          </div>
         </div>
         <div class="fl w-100 w-50-l w-50-m">
           <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
@@ -68,8 +72,6 @@
           <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
           <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
           <p class="f6 fw5 white mt1">Registered in England and Wales 9462175</p>
-          <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(1)">Privacy Policy</p>
-          <p class="f6 fw5 white mt1" @click.stop.prevent="goTo(2)">Terms Of Use</p>
         </div>
       </div>
     </div>
