--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -12,12 +12,12 @@
           </div>
         </div>
         <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small"
-             style=" background-image: url('http://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_feel_confident.png');">
+             style=" background-image: url('https://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_feel_confident.png');">
         </div>
       </div>
       <div class="cf db mv5 avenir">
         <div class="w-50 fl h4 h5-l h5-m stretching-img-small"
-             style=" background-image: url('http://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_dancer_increase_wellbeing.jpg');">
+             style=" background-image: url('https://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_dancer_increase_wellbeing.jpg');">
         </div>
         <div class="w-50 fl pt5-l pt5-m pt2">
           <h1 class="f4 f1-l f1-m navy w-90-l tl b fl mt0-ns mb2 left--1 left--2-l relative">Increase your
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small"
-             style=" background-image: url('http://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_walk_with_friend_change_life.jpg');">
+             style=" background-image: url('https://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_walk_with_friend_change_life.jpg');">
         </div>
       </div>
     </div>
@@ -234,6 +234,12 @@
             Join our community on <a href="https://www.facebook.com/getwalkers/"
                                      class=" white underline" target="_blank">Facebook</a>
           </h3>
+          <div class="pt4">
+            <a href="//activepathways.co/terms/#privacy" target="_blank" class="f6 fw5 white mt1">Privacy Policy</a>
+          </div>
+          <div class="pt4">
+            <a href="//activepathways.co/terms/#terms" target="_blank" class="f6 fw5 white mt1">Terms Of Use</a>
+          </div>
         </div>
         <div class="fl w-100 w-50-l w-50-m">
           <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
