Added /terms handler

--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -235,10 +235,10 @@
                                      class=" white underline" target="_blank">Facebook</a>
           </h3>
           <div class="pt4">
-            <a href="/terms/#privacy" target="_blank" class="f6 fw5 white mt1">Privacy Policy</a>
+            <a href="/terms#privacy" target="_blank" class="f6 fw5 white mt1">Privacy Policy</a>
           </div>
           <div class="pt4">
-            <a href="/terms/#terms" target="_blank" class="f6 fw5 white mt1">Terms Of Use</a>
+            <a href="/terms#terms" target="_blank" class="f6 fw5 white mt1">Terms Of Use</a>
           </div>
         </div>
         <div class="fl w-100 w-50-l w-50-m">
