fix sign up modal

--- a/service-web/src/components/login/signUp/signUp.html
+++ b/service-web/src/components/login/signUp/signUp.html
@@ -94,7 +94,9 @@
                     CONNECT</a>
                 </div>-->
               </form>
-              <div class="terms">*By clicking sign up, I agree to Active Pathways <a href="/terms#privacy" target="_blank">Privacy Policy</a> and <a href="/terms#terms"  target="_blank">Terms of use</a>.</div>
+              <div class="terms">*By clicking sign up, I agree to Active Pathways
+                <a href="" onclick="window.open('/terms#privacy', '_blank')">Privacy Policy</a> and <a href="" onclick="window.open('/terms#terms', '_blank')">Terms of use</a>.
+              </div>
             </div>
             <div class="fl w-100 w-50-l w-50-m blue-dark-color pa5 br--right br3 dn db-l db-m vh-100">
             </div>
