embedded youtube video in the challenge detail

--- a/service-web/src/views/challenge-page/challenge-page.html
+++ b/service-web/src/views/challenge-page/challenge-page.html
@@ -50,6 +50,7 @@
               <div>
               </div>
             </article>
+            <youtube :video-id="videoId"></youtube>
           </div>
         </div>
       </div>
